# Voice-to-Value-Speech-to-Structure-Content-Pipeline

./: .gitignore  README.md  geminisot.py  pyproject.toml  report.md  sarvamsot.py  transcript_output_sarvam.html
output/: transcript_output.html
