[project]
name = "task-5"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "google-genai>=1.64.0",
    "nltk>=3.9.2",
    "pydub>=0.25.1",
    "sarvamai>=0.1.25",
    "scikit-learn>=1.8.0",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []
